# Weekly-Report-Engine

./: CMakeLists.txt  README.md  append_sheet_injection.py  cleanup.sh  empty_sheet_injection.py  fix_csv_format.py  parse_inbox.py  run_engine.py  sheet_injection.py  start.sh
include/: Property.hpp  dictionaries.hpp  helper_functions.hpp  injection_routines.hpp  main.hpp  output_routines.hpp
src/: main.cpp
